--- a/ios/ChatApp/Info.plist
+++ b/ios/ChatApp/Info.plist
@@ -36,6 +36,8 @@
 	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs to access photos for profile picture updation.</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
