--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
+
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
@@ -122,4 +123,4 @@ apply from: file("../../node_modules/@react-native-community/cli-platform-androi
 
 apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
 
-apply plugin: ('com.google.gms.google-services')
+apply plugin: 'com.google.gms.google-services'
