--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/auth": "^20.0.0",
     "@react-native-firebase/firestore": "^20.0.0",
     "@react-native-firebase/storage": "^20.0.0",
+    "@react-native-google-signin/google-signin": "^12.1.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
