--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-document-picker": "^9.2.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-crop-picker": "^0.41.1",
     "react-native-safe-area-context": "^4.10.1",
